; ModuleID = '/home/carl/AnghaBench/linux/security/lockdown/extr_lockdown.c_lock_kernel_down.c'
source_filename = "/home/carl/AnghaBench/linux/security/lockdown/extr_lockdown.c_lock_kernel_down.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kernel_locked_down = common dso_local global i32 0, align 4
@EPERM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [58 x i8] c"Kernel is locked down from %s; see man kernel_lockdown.7\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @lock_kernel_down to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lock_kernel_down(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* @kernel_locked_down, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp uge i32 %6, %7
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load i32, i32* @EPERM, align 4
  %11 = sub nsw i32 0, %10
  store i32 %11, i32* %3, align 4
  br label %16

12:                                               ; preds = %2
  %13 = load i32, i32* %5, align 4
  store i32 %13, i32* @kernel_locked_down, align 4
  %14 = load i8*, i8** %4, align 8
  %15 = call i32 @pr_notice(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str, i64 0, i64 0), i8* %14)
  store i32 0, i32* %3, align 4
  br label %16

16:                                               ; preds = %12, %9
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @pr_notice(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
